<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Dumpert</string>

    <string name="tip_touch_to_enlarge">TIP: Touch to enlarge.</string>
    <string name="tip_zoom">TIP: You can zoom in here.</string>
    <string name="tip_close">Close</string>

    <string name="tip_offline">You\'re in offline mode</string>
    <string name="cached_version">cached version</string>

    <string name="items_failed">Unable to load items.</string>
    <string name="comments_failed">Unable to load comments.</string>
    <string name="video_failed">Unable to load video.</string>
    <string name="audio_failed">Unable to load audio.</string>
    <string name="gif_failed">Unable to load image.</string>
    <string name="moreinfo">Error info</string>

    <string name="best_comment">best comment</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="nav_new">New</string>
    <string name="nav_top">Top</string>
    <string name="nav_images">Images</string>
    <string name="nav_videos">Video\'s</string>
    <string name="nav_audio">Audio</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>

    <string name="about_1stline">We\'re WebArtisans.\nWe have a passion for creating handmade websites and (native) android apps for a low price.</string>
    <string name="about_button">Our website</string>

    <string name="data_settings">Data settings</string>
    <string name="autoplay_vids">Play video\'s automatically</string>
    <string name="autoplay_vids_sum">With build-in videoplayer</string>
    <string name="visual_settings">Visual settings</string>
    <string name="theme">Theme</string>
    <string name="video_quality">Video quality</string>
    <string name="nsfw">Show NSFW content</string>
    <string name="nsfw_sum">NSFW means \'Not Safe For Work\'</string>
    <string name="dynamiccolors">Use dynamic colors</string>
    <string name="dynamiccolors_sum">Adjust interface colors based on content.</string>

    <string-array name="quality_values">
        <item>hq</item>
        <item>hd</item>
    </string-array>

    <string-array name="quality">
        <item>HQ</item>
        <item>HD</item>
    </string-array>

    <string-array name="themes_values">
        <item>green</item>
        <item>blue</item>
        <item>red</item>
        <item>pink</item>
        <item>orange</item>
        <item>bluegray</item>
        <item>webartisans</item>
    </string-array>

    <string-array name="themes">
        <item>Green</item>
        <item>Blue</item>
        <item>Red</item>
        <item>Pink</item>
        <item>Orange</item>
        <item>Blue Gray</item>
        <item>WebArtisans</item>
    </string-array>

    <string name="share">Share</string>
    <string name="search">Search</string>

    <string name="time_ago_prefix"></string>
    <string name="time_ago_suffix">ago</string>

    <string name="time_ago_seconds">less than a minute</string>
    <string name="time_ago_minute">about a minute</string>
    <string name="time_ago_hour">about an hour</string>
    <string name="time_ago_day">a day</string>
    <string name="time_ago_month">about a month</string>
    <string name="time_ago_year">about a year</string>

    <plurals name="time_ago_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="time_ago_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">about %d hours</item>
    </plurals>
    <plurals name="time_ago_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="time_ago_months">
        <item quantity="one">%d month</item>
        <item quantity="other">%d months</item>
    </plurals>
    <plurals name="time_ago_years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>
</resources>
