<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/data_settings">
        <CheckBoxPreference
            android:key="autoplay_vids"
            android:title="@string/autoplay_vids"
            android:summary="@string/autoplay_vids_sum"
            android:defaultValue="true"/>

        <ListPreference
            android:entries="@array/quality"
            android:entryValues="@array/quality_values"
            android:key="video_quality"
            android:title="@string/video_quality"
            android:summary="%s"
            android:defaultValue="hd"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/visual_settings">
        <ListPreference
            android:entries="@array/themes"
            android:entryValues="@array/themes_values"
            android:key="theme"
            android:title="@string/theme"
            android:summary="%s"
            android:defaultValue="green"/>

        <CheckBoxPreference
            android:key="dynamiccolors"
            android:title="@string/dynamiccolors"
            android:summary="@string/dynamiccolors_sum"
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:key="nsfw"
            android:title="@string/nsfw"
            android:summary="@string/nsfw_sum"
            android:defaultValue="false"/>
    </PreferenceCategory>

</PreferenceScreen>